--- a/source/dialogs/histogram-format/histogram-format-modal.html
+++ b/source/dialogs/histogram-format/histogram-format-modal.html
@@ -254,7 +254,7 @@
                             </div>
                         </div>
                     </wi-tab>
-                    <wi-tab heading='Refrence Window'>
+                    <wi-tab heading='Reference Window'>
                         <div class="padding-1em container-fluid">
                             <div class="row">
                                 <form class='col-sm-12 form-horizontal form-condensed'>
