--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -193,70 +193,66 @@
                                                 ng-class="{selected:$index == selectedRowCurve}"
                                                 ng-click="wiModal.setClickedRowCurve($index)">
                                                 <td style="width: 12%">
-                                                    <!-- <input type="text" ng-model="curve.alias" name="curveName"
-                                                            class="form-control wi-form-control"
-                                                            ng-change="wiModal.onChangeCurve($index);">
-                                                    </input> -->
-                                                    <select ng-model="wiModal.lineCurve[$index].id"
+                                                    <select ng-model="wiModal.lineCurve[curve._index].id"
                                                             name="curveName"
                                                             class="form-control wi-form-control"
-                                                            ng-options="item.id as item.datasetCurve for item in wiModal.arr"
-                                                            ng-change="wiModal.onSelectCurve($index);" 
-                                                            ng-disabled="wiModal.curvesChanged[wiModal.__idx].change != '2'"></select>
+                                                            ng-options="item.id as item.datasetCurve for item in wiModal.curvesArr"
+                                                            ng-change="wiModal.onSelectCurve();" 
+                                                            ng-disabled="wiModal.setDisabledCurve(curve._index)"></select>
                                                 </td>
 
                                                 <td>
                                                     <input type="text" ng-model="curve.alias"
                                                            class="form-control wi-form-control"
-                                                           ng-change="wiModal.onChangeCurve();">
+                                                           ng-change="wiModal.onChangeCurve();"
+                                                           ng-disabled="!wiModal.lineCurve[curve._index].id">
                                                 </td>
                                                 <td>
-                                                    <input type="number" ng-model="curve.minValue"
+                                                    <input type="number" ng-model="curve.minValue" step="any"
                                                            class="form-control wi-form-control"
-                                                           ng-change="wiModal.onChangeCurve();">
+                                                           ng-change="wiModal.onChangeCurve();"
+                                                           ng-disabled="!wiModal.lineCurve[curve._index].id">
                                                 </td>
                                                 <td>
-                                                    <input type="number" ng-model="curve.maxValue"
+                                                    <input type="number" ng-model="curve.maxValue" step="any"
                                                            class="form-control wi-form-control"
-                                                           ng-change="wiModal.onChangeCurve();">
+                                                           ng-change="wiModal.onChangeCurve();"
+                                                           ng-disabled="!wiModal.lineCurve[curve._index].id">
                                                 </td>
                                                 <td>
                                                     <select ng-model="curve.displayType" name="log"
                                                             value="" class="form-control wi-form-control"
                                                             ng-options="item for item in wiModal.logLinear track by item"
-                                                            ng-change="wiModal.onChangeCurve();"></select>
+                                                            ng-change="wiModal.onChangeCurve();"
+                                                            ng-disabled="!wiModal.lineCurve[curve._index].id"></select>
                                                 </td>
                                                 <td>
                                                     <select ng-model="curve.displayMode" name="displayMode"
                                                             value="" class="form-control wi-form-control"
                                                             ng-options="item for item in wiModal.displayMode track by item"
-                                                            ng-change="wiModal.onChangeCurve();"></select>
+                                                            ng-change="wiModal.onChangeCurve();"
+                                                            ng-disabled="!wiModal.lineCurve[curve._index].id"></select>
                                                 </td>
                                                 <td>
                                                     <input ng-model="curve.lineOptions"
                                                             type="button" value="Edit..." id="editLine" 
                                                             class="form-control wi-form-control"
                                                             ng-click="wiModal.lineStyleButtonClicked($index, $event); wiModal.onChangeCurve();"
-                                                            ng-disabled="curve.displayMode == 'Symbol' || curve.displayMode == 'None'">
+                                                            ng-disabled="!wiModal.lineCurve[curve._index].id || (curve.displayMode == 'Symbol' || curve.displayMode == 'None')">
                                                 </td>
                                                 <td>
                                                     <input ng-model="curve.symbolOptions"
                                                             type="button" value="Edit..." id="editSymbol" 
                                                             class="form-control wi-form-control"
                                                             ng-click="wiModal.symbolStyleButtonClicked($index, $event); wiModal.onChangeCurve();"
-                                                            ng-disabled="curve.displayMode == 'Line' || curve.displayMode == 'None'">
+                                                            ng-disabled="!wiModal.lineCurve[curve._index].id || (curve.displayMode == 'Line' || curve.displayMode == 'None')">
                                                 </td>
-                                                <!-- <td>
-                                                    <input ng-model="lineSymbolOptions"
-                                                            type="button" value="Edit..." id="editSymbol" 
-                                                            class="form-control wi-form-control"
-                                                            ng-click="wiModal.curveStyleButtonClicked($index, $event); wiModal.onChangeCurve();">
-                                                </td> -->
                                                 <td>
                                                     <select ng-model="curve.displayAs" name="displayAs"
                                                             value="" class="form-control wi-form-control"
                                                             ng-options="item for item in wiModal.displayAs track by item"
-                                                            ng-change="wiModal.onChangeCurve();"></select>
+                                                            ng-change="wiModal.onChangeCurve();"
+                                                            ng-disabled="!wiModal.lineCurve[curve._index].id"></select>
                                                 </td>       
                                             </tr>
                                         </tbody>
@@ -330,13 +326,15 @@
                                                 </td> -->
                                                 <td>
                                                     <input type="text" ng-model="shading.name" 
-                                                    class="form-control wi-form-control"
-                                                    ng-change="wiModal.onChangeShading($index)">
+                                                            class="form-control wi-form-control"
+                                                            ng-change="wiModal.onChangeShading($index)"
+                                                            ng-disabled="!shading.idRightLine">
                                                 </td>
                                                 <td>
                                                     <select ng-model="shading.shadingStyle" 
                                                             class="form-control wi-form-control"
-                                                            ng-change="wiModal.onChangeShading($index)">
+                                                            ng-change="wiModal.onChangeShading($index)"
+                                                            ng-disabled="!shading.idRightLine">
                                                         <option value="fillPattern">Fill Pattern</option>
                                                         <option value="variableShading">Variable Shading</option>
                                                     </select>
@@ -345,12 +343,14 @@
                                                     <input type="button" value="Define" 
                                                             ng-model="shading.fillPattern" 
                                                             class="form-control wi-form-control"
+                                                            ng-disabled="!shading.idRightLine"
                                                             ng-click="wiModal.defineButtonClicked($index); wiModal.onChangeShading($index);">
                                                 </td>
                                                 <!-- <td>
                                                     <input type="button" value="Define" 
                                                             ng-model="shading.variableShading" 
                                                             class="form-control wi-form-control"
+                                                            ng-disabled="!shading.idRightLine"
                                                             ng-click="wiModal.defineVariableButtonClicked($index)">
                                                 </td> -->
                                             </tr>
