move custom name to bottom

--- a/source/dialogs/shading-attribute/shading-attribute-modal.html
+++ b/source/dialogs/shading-attribute/shading-attribute-modal.html
@@ -59,7 +59,7 @@
                                             class="form-control wi-form-control normal-text"
                                             ng-change="wiModal.shadingOptions.idLeftLine = null;
                                             wiModal.setShadingName(wiModal.shadingOptions.idRightLine, wiModal.shadingOptions.idLeftLine); wiModal.shadingOptions.idLeftLine = -3"
-                                            size="6"
+                                            step="any"
                                             ng-disabled="!wiModal.shadingOptions.idRightLine">
                                 </div>
                             </div>
@@ -344,7 +344,7 @@
                                         <div class="form-group">
                                             <label class="control-label col-sm-4">Low</label>
                                             <div class="col-sm-8 padding-0">
-                                                <input type="number" name=""
+                                                <input type="number" step="any"
                                                         class="form-control wi-form-control"
                                                         ng-model="wiModal.variableShadingOptions.fill.varShading.startX">
                                             </div>
@@ -354,7 +354,7 @@
                                         <div class="form-group">
                                             <label class="control-label col-sm-5 padding-right-0 padding-left-60px">High</label>
                                             <div class="col-sm-7">
-                                                <input type="number" name=""
+                                                <input type="number" step="any"
                                                         class="form-control wi-form-control"
                                                         ng-model="wiModal.variableShadingOptions.fill.varShading.endX">
                                             </div>
@@ -416,7 +416,7 @@
                                             <label class="control-label col-sm-4
                                             ">Low</label>
                                             <div class="col-sm-8 padding-0">
-                                                <input type="number" name=""
+                                                <input type="number" step="any"
                                                         class="form-control wi-form-control"
                                                         ng-model="wiModal.variableShadingOptions.positiveFill.varShading.startX">
                                             </div>
@@ -426,7 +426,7 @@
                                         <div class="form-group">
                                             <label class="control-label col-sm-5 padding-right-0 padding-left-60px">High</label>
                                             <div class="col-sm-7">
-                                                <input type="number" name=""
+                                                <input type="number" step="any"
                                                         class="form-control wi-form-control"
                                                         ng-model="wiModal.variableShadingOptions.positiveFill.varShading.endX">
                                             </div>
@@ -481,7 +481,7 @@
                                             <label class="control-label col-sm-4
                                             ">Low</label>
                                             <div class="col-sm-8 padding-0">
-                                                <input type="number" name=""
+                                                <input type="number" step="any"
                                                         class="form-control wi-form-control"
                                                         ng-model="wiModal.variableShadingOptions.negativeFill.varShading.startX">
                                             </div>
@@ -491,7 +491,7 @@
                                         <div class="form-group">
                                             <label class="control-label col-sm-5 padding-right-0 padding-left-60px">High</label>
                                             <div class="col-sm-7">
-                                                <input type="number" name=""
+                                                <input type="number" step="any"
                                                         class="form-control wi-form-control"
                                                         ng-model="wiModal.variableShadingOptions.negativeFill.varShading.endX">
                                             </div>
@@ -542,7 +542,7 @@
                                             <label class="control-label col-sm-4
                                             ">Low</label>
                                             <div class="col-sm-8 padding-0">
-                                                <input type="number" name=""
+                                                <input type="number" step="any"
                                                         class="form-control wi-form-control"
                                                         ng-model="wiModal.variableShadingOptions.fill.varShading.startX">
                                             </div>
@@ -552,7 +552,7 @@
                                         <div class="form-group">
                                             <label class="control-label col-sm-5 padding-right-0 padding-left-60px">High</label>
                                             <div class="col-sm-7">
-                                                <input type="number" name=""
+                                                <input type="number" step="any"
                                                         class="form-control wi-form-control"
                                                         ng-model="wiModal.variableShadingOptions.fill.varShading.endX">
                                             </div>
@@ -592,7 +592,7 @@
                                             <label class="control-label col-sm-4
                                             ">Low</label>
                                             <div class="col-sm-8 padding-0">
-                                                <input type="number" name=""
+                                                <input type="number" step="any"
                                                         class="form-control wi-form-control"
                                                         ng-model="wiModal.variableShadingOptions.positiveFill.varShading.startX">
                                             </div>
@@ -602,7 +602,7 @@
                                         <div class="form-group">
                                             <label class="control-label col-sm-5 padding-right-0 padding-left-60px">High</label>
                                             <div class="col-sm-7">
-                                                <input type="number" name=""
+                                                <input type="number" step="any"
                                                         class="form-control wi-form-control"
                                                         ng-model="wiModal.variableShadingOptions.positiveFill.varShading.endX">
                                             </div>
@@ -639,7 +639,7 @@
                                             <label class="control-label col-sm-4
                                             ">Low</label>
                                             <div class="col-sm-8 padding-0">
-                                                <input type="number" name=""
+                                                <input type="number" step="any"
                                                         class="form-control wi-form-control"
                                                         ng-model="wiModal.variableShadingOptions.negativeFill.varShading.startX">
                                             </div>
@@ -649,7 +649,7 @@
                                         <div class="form-group">
                                             <label class="control-label col-sm-5 padding-right-0 padding-left-60px">High</label>
                                             <div class="col-sm-7">
-                                                <input type="number" name=""
+                                                <input type="number" step="any"
                                                         class="form-control wi-form-control"
                                                         ng-model="wiModal.variableShadingOptions.negativeFill.varShading.endX">
                                             </div>
@@ -687,7 +687,7 @@
                                             <label class="control-label col-sm-4
                                             ">Low</label>
                                             <div class="col-sm-8 padding-0">
-                                                <input type="number" name=""
+                                                <input type="number" step="any"
                                                         class="form-control wi-form-control"
                                                         ng-model="wiModal.variableShadingOptions.fill.varShading.startX">
                                             </div>
@@ -697,36 +697,24 @@
                                         <div class="form-group">
                                             <label class="control-label col-sm-5 padding-right-0 padding-left-60px">High</label>
                                             <div class="col-sm-7">
-                                                <input type="number" name=""
+                                                <input type="number" step="any"
                                                         class="form-control wi-form-control"
                                                         ng-model="wiModal.variableShadingOptions.fill.varShading.endX">
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form-group">
-                                    <label class="control-label col-sm-3 padding-left-3em">
-                                        Custom Name
-                                    </label>
-                                    <div class="col-sm-4 padding-0">
-                                        <input type="text" 
-                                                ng-model="wiModal.variableShadingOptions.fill.varShading.customFills.name"
-                                                class="form-control wi-form-control normal-text">
-                                    </div>
-                                    
-                                </div>
-                                <br><br>
                                 <form action="" class="form-horizontal">
-                                    <div class="width-85-percent float-left padding-left-1em" style="height: 200px; overflow: auto;">
+                                    <div class="width-85-percent float-left padding-left-1em" style="height: 200px; overflow: auto; border-bottom: solid 1.2em transparent">
                                         <table style="border-collapse: collapse;" class="text-on-table table-bordered customFillsTable col-sm-12">
                                             <thead>
                                                 <tr class="text-center">
-                                                    <td class="padding-tb-small">Low Value</td>
-                                                    <td class="padding-tb-small">High Value</td>
-                                                    <td class="padding-tb-small">Fill Pattern</td>
-                                                    <td class="padding-tb-small">Foreground</td>
-                                                    <td class="padding-tb-small">Background</td>
-                                                    <td class="padding-tb-small">Description</td>
+                                                    <th class="padding-tb-small">Low Value</th>
+                                                    <th class="padding-tb-small">High Value</th>
+                                                    <th class="padding-tb-small">Fill Pattern</th>
+                                                    <th class="padding-tb-small">Foreground</th>
+                                                    <th class="padding-tb-small">Background</th>
+                                                    <th class="padding-tb-small">Description</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
@@ -734,12 +722,12 @@
                                                     ng-class="{'selected':$index == selectedRow}"
                                                     ng-click="wiModal.setClickedRow($index)">
                                                     <td style="width: 12%">
-                                                        <input type="number"
+                                                        <input type="number" step="any"
                                                                 ng-model="fill.lowVal"
                                                                 class="form-control wi-form-control">
                                                     </td>
                                                     <td style="width: 12%">
-                                                        <input type="number"
+                                                        <input type="number" step="any"
                                                                 ng-model="fill.highVal"
                                                                 class="form-control wi-form-control">
                                                     </td>
@@ -787,10 +775,7 @@
                                     <div class="width-15-percent float-left padding-left-5px text-center">
                                         <button class="btn btn-default" ng-click="wiModal.addRow()"><span class="plus-16x16"></span></button>
                                         <button class="btn btn-default" ng-click="wiModal.removeRow()"><span class="delete-16x16"></span></button>
-                                        <br><br><br>
-                                        <button ng-click="wiModal.saveCustomFills()" style="font-size: 11px"
-                                                class="form-control wi-form-control">Template name</button>
-                                        <br>
+                                        <br><br>
                                         <select ng-model="wiModal.customFillsCurrent"
                                                 class="form-control wi-form-control normal-text"
                                                 ng-options="customFills as customFills.name for customFills in wiModal.customFillsList"
@@ -798,7 +783,25 @@
                                                 <option value="">--------</option>
                                         </select>
                                     </div> 
-
+                                    <br>
+                                    <div class="row">
+                                        <div class="col-sm-7">
+                                            <div class="form-group">
+                                                <label class="control-label col-sm-5 padding-left-3em">
+                                                    Custom Name
+                                                </label>
+                                                <div class="col-sm-7 padding-0">
+                                                    <input type="text" 
+                                                            ng-model="wiModal.variableShadingOptions.fill.varShading.customFills.name"
+                                                            class="form-control wi-form-control normal-text">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm-3">
+                                            <button ng-click="wiModal.saveCustomFills()" style="font-size: 11px"
+                                                    class="form-control wi-form-control">Template name</button>
+                                        </div>
+                                    </div>
                                 </form>
                             </div>
 
