--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -316,12 +316,12 @@
                                                             class="form-control wi-form-control" id="fixedVal" 
                                                             ng-change="wiModal.onChangeShading($index);wiModal.setShadingName(shading.idRightLine, shading.idLeftLine, shading._index); shading.idLeftLine = -3"
                                                             ng-disabled="!shading.idRightLine"
-                                                            size="6">
+                                                            step="any">
                                                 </td>
                                                 <!-- <td class="border border-style1-right">
                                                     <input type="number" ng-model="shading.rightFixedValue" 
                                                             class="form-control wi-form-control"
-                                                            ng-change="wiModal.onChangeShading($index);wiModal.setShadingName();" size="6"
+                                                            ng-change="wiModal.onChangeShading($index);wiModal.setShadingName();"  step="any"
                                                             disabled>
                                                 </td> -->
                                                 <td>
