add verify after apply zoneMng

--- a/source/dialogs/zone-manager/zone-manager-modal.html
+++ b/source/dialogs/zone-manager/zone-manager-modal.html
@@ -97,13 +97,13 @@
                                                             ng-change="wiModal.onZoneChanged($index);">
                                                 </td>
                                                 <td>
-                                                    <input type="number" step="0.01"
+                                                    <input type="number" step="any"
                                                             ng-model="zone.properties.startDepth"
                                                             class="form-control wi-form-control"
                                                             ng-change="wiModal.onZoneChanged($index);">
                                                 </td>
                                                 <td>
-                                                    <input type="number" step="0.01" 
+                                                    <input type="number" step="any" 
                                                             ng-model="zone.properties.endDepth"
                                                             ng-change="wiModal.onZoneChanged($index);"
                                                             class="form-control wi-form-control">
