--- a/source/html/index.html
+++ b/source/html/index.html
@@ -60,6 +60,7 @@
         }
     </script>
     <script src="vendor/js/jquery.min.js"></script>
+    <script src="vendor/js/async.min.js"></script>
     <script src="vendor/js/bootstrap.min.js"></script>
     <script src="vendor/js/angular.min.js"></script>
     <!--<script src="vendor/js/moment.min.js"></script>-->
