--- a/source/dialogs/depth-track-properties/depth-track-properties-modal.html
+++ b/source/dialogs/depth-track-properties/depth-track-properties-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
-                <h4 class="modal-title"><span class="tri-tracks-blank-32x32"></span>Depth Track Properties</h4>
+                <h4 class="modal-title"><span class="tri-tracks-blank-32x32"></span>Depth Track Properties - {{wiModal.props.title}}</h4>
             </div>
             <div class="modal-body padding-0">
                 <form action="" class="form-horizontal form-condensed">
