--- a/source/dialogs/zone-track-properties/zone-track-properties-modal.html
+++ b/source/dialogs/zone-track-properties/zone-track-properties-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Zone Track Properties</h4>
+                <h4 class="modal-title">Zone Track Properties - {{wiModal.title}}</h4>
             </div>
             <div class="modal-body">
                 <form action="" class="form-horizontal dialog-style">
